--- a/latex/multigpu_rbffd.tex
+++ b/latex/multigpu_rbffd.tex
@@ -128,7 +128,7 @@ The reduced performance observed for multiple GPUs per node (e.g., 1 compute nod
 \begin{figure}
 \centering
 \includegraphics[width=0.5\textwidth]{gpu_content/omnigraffle/CascadeIOHub.pdf}
-\caption{A block diagram of Cascade's hardware structure. While GPUs can operate independently, the single lane connecting the I/O Hub to the NVidia Hub acts as a bottleneck. Simultaneous memory transfers to multiple GPUs must serialized to cross the link. Based on the output from \texttt{lspci -tv}. }
+\caption{A block diagram of Cascade's hardware structure. While GPUs can operate independently, the single lane connecting the I/O Hub to the NVidia Hub acts as a bottleneck. Simultaneous memory transfers to multiple GPUs must serialized to cross the link. Structure based on the output from \texttt{lspci -tv}. }
 \label{fig:cascade_iohub}
 \end{figure}
 
@@ -136,22 +136,19 @@ Table~\ref{tbl:cascade_m2070_overlap}, presents the scaling data for 1, 2, 4 and
 \begin{align*} 
 S_p = \ ^{t_{non-overlapped}} /_{t_{overlapped}},
 \end{align*}
-to demonstrate improvement in each case compared to the non-overlapping results. Two observations are immediately apparent: a) by overlapping communication and computation we achieve between 2x and 5x speedup for the distributed SpMV in all cases, and b) the I/O Hub contention that serialized computation in the non-overlapping case disappears (or at least it is amortized by computation). 
+to demonstrate improvement in each case compared to the non-overlapping results. Two observations are immediately apparent: a) by overlapping communication and computation we achieve between 2x and 5x speedup for the distributed SpMV in all cases, and b) the I/O Hub contention that serialized computation in the non-overlapping case disappears (or at least it is amortized by computation). Indeed, the cases for 4 PPN on a single compute node actually reflect more than 4x speedup (in bold) due to the resolution of contention effects.  
 
-For each PPN block in Table~\ref{tbl:cascade_m2070_overlap} ideal scaling would show the GFLOP/sec doubled by row for up to more than 64 GFLOP/sec. Obviously the strong scaling for 1 PPN is not ideal, but we do observe close to 60\% efficiency at 8 nodes (1 PPN) and $n=50$. in the case of the GPU is not ideal when executing more than one PPN. However, for $n=50$ and 1 PPN we see super but on only 32 GPUs, and impeded by the I/O hub bottleneck, we manage to achieve 130 GFLOP/sec for $n=101$. Compare this to the GFLOP/sec scaling results on Itasca in Figure~\ref{fig:compare_strong_scaling_gflops_all_stencils} where 130 GFLOP/sec requires approximately 
+Within each the three PPN blocks of Table~\ref{tbl:cascade_m2070_overlap} ideal scaling would show the GFLOP/sec doubled by row for up to more than 64 GFLOP/sec. Obviously the strong scaling for 1 PPN is not ideal, but we observe close to 60\% strong scaling efficiency at 8 nodes (1 PPN) and $n=50$. A real testament  $n=50$ impeded by the I/O hub bottleneck, we manage to achieve 130 GFLOP/sec for $n=101$. Compare this to the GFLOP/sec scaling results on Itasca in Figure~\ref{fig:compare_strong_scaling_gflops_all_stencils} where 130 GFLOP/sec requires approximately 
 
 %The total time required to compute the distributed SpMV for 1 node and 4 PPN is observed in the neighborhood of 80 ms for $n=50$ and the non-overlapping algorithm (i.e. without splitting $\setCenters \backslash \setBoundary$ and $\setBoundary$). Of those 80 ms, approximately 60 ms is spent performing non-computation tasks such as transferring from GPU down to CPU, encoding and sending data via MPI and then transferring back up to the GPU. The remaining 20 ms is dedicated to performing the SpMV.
 %
 %By introducing the overlapped GPU kernels, the total time for the distributed SpMV for $n=50$ (1 node, 4 PPN) drops to approximately 15 ms---25\% less than the SpMV-only portion of the non-overlapped approach. Since the non-computation tasks amount to only 12 ms in the overlapped case, our first conclusion is that overlapping hides 100\% of communication for the cases tested in Table~\ref{tbl:cascade_m2070_overlap}, as well as the entire SpMV for $\setBoundary$. 
 %
 %
-Greater than 4x speedup (in bold) is possible due t
-
-
 
 \begin{table}[htb]
 \centering
-\caption{GFLOP/sec achieved by the distributed ELL SpMV on Cascade's M2070 GPUs, with MPI communication overlapping two GPU kernels. The SpMV computes derivatives over a 3-D regular grid of size $N=4096000$ nodes (i.e., $160^3$). Data reflects various combinations of stencil sizes, number of compute nodes and number of processes per node (PPN). Quantities in parentheses denote the speedup factors achieved by the overlapping algorithm over the non-overlapping approach for identical combinations of compute nodes, PPN, stencil size, etc. }
+\caption{GFLOP/sec achieved by the distributed ELL SpMV on Cascade's M2070 GPUs, with MPI communication overlapping a split SpMV on the GPU. The SpMV computes derivatives over a 3-D regular grid of size $N=4096000$ nodes (i.e., $160^3$). Data reflects various combinations of stencil sizes, number of compute nodes and number of processes per node (PPN). Quantities in parentheses denote the speedup factors achieved by the overlapping algorithm over the non-overlapping approach for identical combinations of compute nodes, PPN, stencil size, etc. }
 \label{tbl:cascade_m2070_overlap}
 \begin{tabular}{c|c|c|c|c|c|c}
  \multicolumn{2}{c}{ } & \multicolumn{4}{|c|}{Observed GFLOP/sec (Speedup over Non-overlapped)} \\  \hline
