--- a/latex/multigpu_rbffd.tex
+++ b/latex/multigpu_rbffd.tex
@@ -135,7 +135,7 @@ The reduced performance observed for multiple GPUs per node (e.g., 1 compute nod
 
 \begin{table}[htb]
 \centering
-\caption{GFLOP/sec achieved by the distributed ELL SpMV on Cascade's M2070 GPUs, with MPI communication overlapping a split SpMV on the GPU. The SpMV computes derivatives over a 3-D regular grid of size $N=4096000$ nodes (i.e., $160^3$). Data reflects various combinations of stencil sizes, number of compute nodes and number of processes per node (PPN). Quantities in parentheses denote the speedup factors achieved by the overlapping algorithm over the non-overlapping approach for identical combinations of compute nodes, PPN, stencil size, etc. }
+\caption{GFLOP/sec achieved by the distributed ELL SpMV on Cascade's M2070 GPUs, with MPI communication overlapping a split SpMV on the GPU. The SpMV computes derivatives over a 3-D regular grid of size $N=4096000$ nodes (i.e., $160^3$). Data reflects various combinations of stencil sizes, number of compute nodes and number of processes per node (PPN). Quantities in parentheses denote the speedup factors achieved by the overlapping algorithm versus the non-overlapping approach for identical combinations of compute nodes, PPN, stencil size, etc. in Table~\ref{tbl:cascade_m2070_nonoverlap} }
 \label{tbl:cascade_m2070_overlap}
 \begin{tabular}{c|c|c|c|c|c|c}
  \multicolumn{2}{c}{ } & \multicolumn{4}{|c|}{Observed GFLOP/sec (Speedup over Non-overlapped)} \\  \hline
@@ -161,13 +161,7 @@ S_p = \ ^{t_{non-overlapped}} /_{t_{overlapped}},
 \end{align*}
 to demonstrate improvement in each case compared to the non-overlapping results. Two observations are immediately apparent: a) by overlapping communication and computation we achieve between 2x and 5x speedup for the distributed SpMV in all cases, and b) the I/O Hub contention that serialized computation in the non-overlapping case disappears (or at least it is amortized by computation). Indeed, the cases for 4 PPN on a single compute node actually reflect more than 4x speedup (in bold) due to the resolved contention effects. 
 
-Within each of the three PPN blocks of Table~\ref{tbl:cascade_m2070_overlap} ideal scaling would appear as a doubling of GFLOP/sec. Obviously the strong scaling is not ideal, but for $n=50$ and 8 compute nodes we observe close to 60\% strong scaling efficiency at 1 PPN, over 40\% efficiency for 2 PPN, and 30\% efficiency for 4 PPN (32 GPUs total), all very respectable achievements. The $n=50$ test case achieves over 88 GFLOP/sec on 32 GPUs. If this number is compared to the GFLOP/sec from strong scaling on Itasca (i.e., Figure~\ref{fig:compare_strong_scaling_gflops_all_stencils}), we find that the CPU-only implementation requires roughly 256 processes to match the same performance. Additionally, Itasca processes are grouped in 8 PPN, so in truth we have 32 of Itasca's compute nodes performing as well as the 32 GPUs spanning only 8 compute nodes on Cascade.   
-
-%The total time required to compute the distributed SpMV for 1 node and 4 PPN is observed in the neighborhood of 80 ms for $n=50$ and the non-overlapping algorithm (i.e. without splitting $\setCenters \backslash \setBoundary$ and $\setBoundary$). Of those 80 ms, approximately 60 ms is spent performing non-computation tasks such as transferring from GPU down to CPU, encoding and sending data via MPI and then transferring back up to the GPU. The remaining 20 ms is dedicated to performing the SpMV.
-%
-%By introducing the overlapped GPU kernels, the total time for the distributed SpMV for $n=50$ (1 node, 4 PPN) drops to approximately 15 ms---25\% less than the SpMV-only portion of the non-overlapped approach. Since the non-computation tasks amount to only 12 ms in the overlapped case, our first conclusion is that overlapping hides 100\% of communication for the cases tested in Table~\ref{tbl:cascade_m2070_overlap}, as well as the entire SpMV for $\setBoundary$. 
-%
-%
+Within each of the three PPN blocks of Table~\ref{tbl:cascade_m2070_overlap} ideal scaling would appear as a doubling of GFLOP/sec. Obviously the strong scaling is not ideal, but for $n=50$ and 8 compute nodes we observe close to 60\% strong scaling efficiency at 1 PPN, over 40\% efficiency for 2 PPN, and 30\% efficiency for 4 PPN (32 GPUs total), all very respectable achievements. The $n=50$ test case achieves over 88 GFLOP/sec on 32 GPUs. If this number is compared to the GFLOP/sec from strong scaling on Itasca (i.e., Figure~\ref{fig:compare_strong_scaling_gflops_all_stencils}), we find that the CPU-only implementation requires roughly 256 processes to match the same performance. Itasca processes are grouped in 8 PPN, so in truth we have 32 of Itasca's compute nodes performing as well as the 32 GPUs spanning only 8 compute nodes on Cascade. Finally, we are pleased to observe that the 32 M2070s achieve greater than 130 GFLOP/sec for $n=101$. 
 
 
 \section{Conclusion and Future Work}
